[package]
name = "arnis"
version = "0.2.0"
edition = "2021"
description = "Реальные карты в Minecraft"

[dependencies]
reqwest  = { version = "0.12", features = ["blocking", "json"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
clap     = { version = "4",    features = ["derive"] }
anyhow   = "1"
zip      = "0.6"

[[bin]]
name = "arnis"
path = "src/main.rs"
